# search-datasets

./: .gitignore  README.md  pyproject.toml  scenario_brainstorm.md
audiocaps/: README.md  eval.py  example.json  ground_truth.json  queries.json  run_demo.py
chartqa/: queries.json
cmrc2018/: README.md  example.json  ground_truth.json  predictions.json  run_demo.py
coco/: example.json  predictions.json  run_demo.py
cuad/: README.md  eval.py  example.json  ground_truth.json  queries.json  run_demo.py
datasets/: README.md  download_summary.json
demos/: README.md  demo_audiocaps.py  demo_audiocaps_multimodal.py  demo_chartqa_multimodal.py  demo_cmrc2018.py  demo_coco_captions.py  demo_coco_multimodal.py  demo_discord_chat.py  demo_eli5_reddit.py  demo_enron_email.py  demo_github_issues.py  demo_msvd_video.py  demo_multihop_rag.py  demo_spider_sql.py  demo_squad2.py  demo_wildchat.py  run_all_demos.py  utils.py
discord/: README.md  corpus.json  eval.py  ground_truth.json  predictions.json  queries.json  run_demo.py
eli5/: README.md  eval.py  ground_truth.json
enron/: eval.py  example.json  predictions.json  queries.json  run_demo.py
eval/: README.md  __init__.py  llm_judge.py  metrics.py  run_eval.py
finqa/: eval.py  example.json  queries.json
msvd/: eval.py  ground_truth.json  run_demo.py
multihop_rag/: README.md  eval.py  example.json  ground_truth.json  queries.json  run_demo.py
quora_duplicate/: README.md  corpus.json  eval.py
scripts/: download_datasets.py  download_failed.py  download_remaining.py  download_remaining_small.py  download_small_datasets.py
spider/: eval.py  ground_truth.json  (+2 more)
(+154 files in other folders)
